--- a/Seção 2 /README
+++ b/Seção 2 /README
@@ -1,4 +1,9 @@
+Desafio 1 :
+
 Escreva um programa C# que declara e inicializa as seguintes variáveis:
 
 Declare uma variável int chamada quantity e inicialize-a com o valor 5.
 Declare uma variável double chamada itemPrice e inicialize-a com o valor 24.99.
+
+Desafio 2 : 
+Armazene o char B em uma variável chamada initial.
