--- a/Seção 2 /README
+++ b/Seção 2 /README
@@ -7,3 +7,6 @@ Declare uma variável double chamada itemPrice e inicialize-a com o valor 24.99.
 
 Desafio 2 : 
 Armazene o char B em uma variável chamada initial.
+
+Desafio 3:
+Armazene a string I am learning to code with Coddy! em uma variável chamada coddy.
