--- a/Seção 4 /README
+++ b/Seção 4 /README
@@ -2,3 +2,15 @@ Desafio 1 :
 Escreva um código que inicializa duas variáveis, a e b, com os valores 5.2 e 2.6 (respectivamente).
 
 Depois disso, inicialize outra variável c que conterá o resultado de a / b.
+
+Desafio 2 : 
+Escreva um código que inicialize três variáveis, a (int), b (double) e c (int) com os valores 9, 2.6 e 11 (respectivamente).
+
+Depois disso, inicialize as seguintes variáveis:
+
+d (int) que conterá o resultado de a módulo 2 
+e (int) que conterá o resultado de a módulo 3
+f (double) que conterá o resultado de b módulo 1.5
+g (double) que conterá o resultado de b módulo 3.9
+h (int) que conterá o resultado de c módulo 10
+Verifique o resultado e veja como diferentes dividendos e divisores afetam o resultado.
