--- a/Seção 4 /README
+++ b/Seção 4 /README
@@ -23,3 +23,13 @@ Sua tarefa é adicionar as seguintes operações, nesta ordem:
 Use o operador de incremento (++) quatro vezes para adicionar 4 a count
 Use o operador de multiplicação (*) para multiplicar count por 2
 Use o operador de decremento (--) uma vez para subtrair 1 de count
+
+Desafio 4: 
+Você recebe um código com a inicialização de count. (Não delete esta linha!)
+
+Sua tarefa é adicionar as seguintes operações, nesta ordem:
+
+Adicione 4 a count
+Multiplique count por 2
+Subtraia 1 de count
+Use os atalhos aritméticos para fazer isso
