--- a/Seção 5 /README
+++ b/Seção 5 /README
@@ -18,3 +18,20 @@ A variável b4 é calculada usando a seguinte lógica:
 Realiza uma operação AND (&&) entre b1, b2 e o NOT de b3
 Para b4 ser true, todas as partes da operação AND devem ser true
 
+Desafio 5 : 
+Vamos criar um programa para decidir se é um bom dia para produção de energia de painéis solares
+
+Inicialize estas variáveis:
+
+isSunny com o valor true
+windSpeed com o valor 5.4
+temperature com o valor 23
+solarPanelOutput com o valor 9
+isCloudy com o valor false
+Crie uma expressão lógica que verifica TODAS estas condições:
+
+Está ensolarado
+A velocidade do vento é menor que 10
+A saída do painel solar é menor que 15
+A temperatura está acima de 20 OU não há nuvens
+
