--- a/Seção 6 /README
+++ b/Seção 6 /README
@@ -18,3 +18,14 @@ Sua tarefa é inicializar a variável status com base nas condições:
 "Breeze" se wind estiver entre 8 e 31 (incluindo 8 e 31).
 "Gale" se wind estiver entre 32 e 63 (incluindo 32 e 63)
 "Storm" caso contrário
+
+Desafio 3 : 
+Crie um programa que recebe um número de mês (1 para janeiro, 2 para fevereiro, etc.) e imprime a estação à qual ele pertence. Use uma declaração switch para a lógica.
+
+As estações e seus meses correspondentes são:
+
+Winter: dezembro (12), janeiro (1), fevereiro (2)
+Spring: março (3), abril (4), maio (5)
+Summer: junho (6), julho (7), agosto (8)
+Autumn: setembro (9), outubro (10), novembro (11)
+
