--- a/Seção 6 /README
+++ b/Seção 6 /README
@@ -29,12 +29,30 @@ Spring: março (3), abril (4), maio (5)
 Summer: junho (6), julho (7), agosto (8)
 Autumn: setembro (9), outubro (10), novembro (11)
 
-Desafio 4: 
+Desafio 4 : 
 Crie um programa que verifica se um número é positivo, negativo ou zero usando o operador ternário. O programa deve:
 
 Receber uma entrada de inteiro do usuário.
 Usar o operador ternário para determinar se o número é positivo, negativo ou zero. Salve a string positive, negative ou zero em result.
 Imprima o resultado no formato: "The number is [positive/negative/zero]".
 Você nested ternary para resolver este problema.
+
+Desafio 5 :
+Você recebe um código que obtém como entrada dois números n1 e n2 e uma string de um único caractere op.
+
+Nota: aprenderemos nas próximas aulas como obter entrada do usuário, atualmente apenas não mexa nas três primeiras linhas.
+
+ 
+
+Os valores possíveis para op são '+', '-', '/' e '*'
+
+Sua tarefa é definir a variável result com base nas condições:
+
+se op for '+', defina result com n1 + n2.
+se op for '-', defina result com n1 - n2.
+se op for '/', defina result com n1 / n2.
+se op for '*', defina result com n1 * n2.
+
+
 
 
