--- a/Seção 9 /README
+++ b/Seção 9 /README
@@ -7,3 +7,16 @@ Escreva um programa que recebe uma entrada, double número.
 Use um laço while para dividir a entrada por 2 enquanto o número for maior ou igual a 3.5.
 
 Imprima o primeiro número que for menor que 3.5.
+
+Desafio 3 :
+Escreva um programa em C# que usa um do-while loop para fazer o seguinte:
+
+Inicialize uma variável sum para 0.
+Inicialize uma variável number para 1.
+Em cada iteração, adicione number a sum.
+Incremente number por 2 em cada iteração (ou seja., 1, 3, 5, ...).
+Imprima number e sum:
+Sum is: [The sum value]
+Num is: [The number value]
+Continue o loop enquanto number for menor ou igual a 50.
+Imprima o valor final de sum após o loop terminar: Final Sum: [The final sum value]
