--- a/Seção 9 /README
+++ b/Seção 9 /README
@@ -25,3 +25,8 @@ Desafio 4 :
 Você recebe um código que imprime os números de 1 a 20 (incluindo).
 
 Sua tarefa é adicionar instruções if e break para que apenas os números de 1 a 15 sejam impressos, o loop sairá antes de imprimir os números de 16 a 20.
+
+Desafio 5 : 
+Você recebe um código que imprime os números de 1 a 20 (inclusive).
+
+Sua tarefa é adicionar if e continue para que apenas os números pares sejam impressos (2, 4, 6, ...). 
