--- a/Seção 9 /README
+++ b/Seção 9 /README
@@ -30,3 +30,26 @@ Desafio 5 :
 Você recebe um código que imprime os números de 1 a 20 (inclusive).
 
 Sua tarefa é adicionar if e continue para que apenas os números pares sejam impressos (2, 4, 6, ...). 
+
+Desafio 6: 
+Escreva um programa que imprime um retângulo de asteriscos (*) com uma largura e altura dadas.
+
+Entrada: Dois inteiros: width e height
+
+Por exemplo:
+
+Se width = 5 e height = 3, a saída deve ser:
+
+*****
+*****
+*****
+Se width = 4 e height = 6, a saída deve ser:
+
+****
+****
+****
+****
+****
+****
+
+Desafio 7 : 
