--- a/Seção 10 /README
+++ b/Seção 10 /README
@@ -1,1 +1,4 @@
 Desafio 1 : 
+Escreva um programa que recebe uma entrada, um número. O número de entrada indica quantas vezes executar o método abaixo. 
+
+Crie um método que calcula a soma de todos os números entre 1 e 1000 (incluindo) e imprime o resultado, nomeie o método como quiser.
