--- a/Seção 10 /README
+++ b/Seção 10 /README
@@ -2,3 +2,10 @@ Desafio 1 :
 Escreva um programa que recebe uma entrada, um número. O número de entrada indica quantas vezes executar o método abaixo. 
 
 Crie um método que calcula a soma de todos os números entre 1 e 1000 (incluindo) e imprime o resultado, nomeie o método como quiser.
+
+Desafio 2 : 
+Escreva um programa que recebe duas entradas, números. Os números de entrada são os argumentos do método. 
+
+Crie um método que recebe dois argumentos, calcula o produto deles e o imprime, nomeie o método como quiser.
+
+Chame o método com os números de entrada.
