--- a/Seção 10 /README
+++ b/Seção 10 /README
@@ -9,3 +9,21 @@ Escreva um programa que recebe duas entradas, números. Os números de entrada s
 Crie um método que recebe dois argumentos, calcula o produto deles e o imprime, nomeie o método como quiser.
 
 Chame o método com os números de entrada.
+
+Desafio 3:
+Cada caso de teste tem três entradas:
+
+A primeira entrada indica quantas vezes fazer iterações
+As duas últimas entradas são números nos quais faremos operações
+Crie um método que recebe dois argumentos e retorna o maior número dos dois. Se ambos forem iguais, retorne qualquer um.
+
+No método main:
+
+Itere iterations vezes. Para cada iteração:
+
+Chame o método Bigger com num1 e num2, e salve o resultado em uma variável
+Identifique qual variável original (num1 ou num2) contém o maior valor
+Divida essa variável original por 2 e atualize-a
+Exemplo: Se num1 for maior, então faça: num1 = num1 / 2
+Imprima o valor recém-atualizado
+Pare o loop cedo se qualquer num1 ou num2 se tornar menor que 2.
